<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="132dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/iconDesc"
            android:src="@drawable/ic_baseline_volume_up_24" />

        <TextView
            android:id="@+id/sfxNameDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sfxNameD"
            android:textSize="26dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/sfxTypeDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sfxTypeD"
            android:textSize="14dp"
            android:layout_marginBottom="28dp" />

        <Button
            android:id="@+id/btnPlay"
            android:onClick="btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/playSFXButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>