<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleProject"
            android:textSize="28dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="192dp"
            android:layout_height="187dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_volume_up_24"
            android:contentDescription="@string/iconDesc"/>

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/profileB"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/buttonLibrary"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/libraryB" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>